feat: add all oteljaeger config options to application.yml
- Move agent attachment from starting() to environmentPrepared() to read application.yml
- Map all oteljaeger.* properties to otel.* agent system properties
- Add instrumentation toggle properties (tomcat, servlet, netty, reactor)
- Add exporter properties (protocol, traces-exporter, metrics-exporter, logs-exporter)
- Add tracing scope properties (kafka, spring-kafka, aws-sdk, mybatis)
- Remove unused EnableOtelJaeger annotation (redundant with spring.factories)
- Remove dead OtelConfig.tracer() method
- Rename AgentNotActiveCondition to WhenAgentInactiveCondition
- Add WeConnectorWebClientInjector for WeConnector framework integration
- Add WeExterfaceInstrumentation for WeExterfaceServiceFactory tracing
- Update README with complete configuration reference